--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "simple-express-app",
+  "name": "vercel-testing",
   "version": "1.0.0",
-  "description": "",
+  "description": "node express testing",
   "main": "index.js",
   "engines": {
     "node": "18.x"
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
